"Added Swagger annotations to department and personnel controllers, updated auth route, and modified swagger.json file"
