# BACKEND/17-PersonelApi_Logs_Documents/src/routes/auth.js
@@ -3,15 +3,14 @@
     EXPRESS - Personnel API
 ------------------------------------------------------- */
 
-const router = require('express').Router()
+const router = require("express").Router();
 
-const { login, logout } = require('../controllers/auth')
+const { login, logout } = require("../controllers/auth");
 
 // URL : /auth
 
-router.post('/login', login)
+router.post("/login", login);
 
-router.all('/logout', logout)
+router.get("/logout", logout);
 
-
-module.exports = router
+module.exports = router;
